fix(layout): exclude scrollbar from root width

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -8,7 +8,7 @@ html {
   scroll-behavior: smooth;
   text-size-adjust: none;
   overflow-x: hidden;
-  width: 100vw;
+  width: 100%;
 
   @media all and ($mobile) {
     scroll-padding-top: 4rem;
